--- a/LDA .ipynb
+++ b/LDA .ipynb
@@ -1800,6 +1800,41 @@
         "# Print classification report\n",
         "print(classification_report(y_test, y_pred))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create a WordCloud\n",
+        "py_df = final_df[(final_df['ABSTRACT_Topic'] == 'Computer Science')]\n",
+        "\n",
+        "long_string = ','.join(list(py_df.ABSTRACT.values))\n",
+        "\n",
+        "wordcloud = WordCloud(stopwords=stopwords.words('english'),\n",
+        "                      width=1920,\n",
+        "                      height=1080,\n",
+        "                      background_color=\"white\",\n",
+        "                      max_words=100,\n",
+        "                      contour_width=3,\n",
+        "                      colormap='summer',\n",
+        "                      random_state=720)\n",
+        "\n",
+        "wordcloud.generate(long_string)\n",
+        "\n",
+        "plt.figure(figsize=(25, 10))\n",
+        "\n",
+        "plt.imshow(wordcloud, interpolation='bilinear')\n",
+        "\n",
+        "plt.axis('off')\n",
+        "\n",
+        "plt.title(\"100 most common words in Computer Science\", pad=14, weight='bold')\n",
+        "\n",
+        "plt.imshow(wordcloud, interpolation='bilinear')\n",
+        "\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
