--- a/LDA .ipynb
+++ b/LDA .ipynb
@@ -39,6 +39,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WOpDJIT2rA-Y"
+      },
+      "source": [
+        "We will use the SpaCy library to perform lemmatization on a list of input texts. Lemmatization is the process of reducing words to their base or dictionary form, which can be useful for standardizing text data and reducing noise in natural language processing tasks. However before beginning to use the Spacy library, you must first install the required tools to begin using the Spacy library. Run the following commands in the terminal to install the required tools.\n",
+        "````\n",
+        "pip install -U pip setuptools wheel\n",
+        "pip install -U spacy\n",
+        "python -m spacy download en_core_web_sm\n",
+        "````\n",
+        "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The code below should install all the necessary libraries that are needed for the application to run successfully. Please do make sure to run it."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In addition, there will be a need to do a more complex change to your launch.json file in case you are using VSCode. Streamlit is compatible with anaconda, however if you are to follow this instructional video then you will be set to go https://www.youtube.com/watch?v=HIqCnwjlH-w&ab_channel=DemoHub%7CDemosForModernDataTools\n",
+        "\n",
+        "I have also provided the Laucnh.json file in this repository, however, in the case of it not working accoringly, then the video will provide you with the exact same steps that I have followed."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -46,7 +79,24 @@
       },
       "outputs": [],
       "source": [
-        "pip install pyLDAvis\n"
+        "pip install pyLDAvis, nltk, pandas, numpy, spacy, string, sklearn, matplotlib, gensim, streamlit\n",
+        "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Another headsup, in the case that the code fails at the pyLDAvis stage, then please skip over that steps at it has randomly stopped working on VScode on the submission day. Thankfully the results of running it can be found in the Models folder under \"lda_model.html\" and \"lda_model_multi.html\""
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Also please run this command to download the relevant functions."
       ]
     },
     {
@@ -420,21 +470,6 @@
         "\n",
         "#And here we will apply the remove_stopwords function. This will remove the stopwords from our dataset's text\n",
         "train_df['ABSTRACT'] = train_df['ABSTRACT'].apply(remove_stopwords)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WOpDJIT2rA-Y"
-      },
-      "source": [
-        "We will use the SpaCy library to perform lemmatization on a list of input texts. Lemmatization is the process of reducing words to their base or dictionary form, which can be useful for standardizing text data and reducing noise in natural language processing tasks. However before beginning to use the Spacy library, you must first install the required tools to begin using the Spacy library. Run the following commands in the terminal to install the required tools.\n",
-        "````\n",
-        "pip install -U pip setuptools wheel\n",
-        "pip install -U spacy\n",
-        "python -m spacy download en_core_web_sm\n",
-        "````\n",
-        "\n"
       ]
     },
     {
